name:               todo
version:            0.1
license:            MIT
author:             Joel Hermanns
maintainer:         joel.hermanns@gmail.com
category:           Web
build-type:         Simple
cabal-version:      >=1.8

executable todo 
    main-is:        Main.hs
    hs-source-dirs: src
    extensions:     EmptyDataDecls
    build-depends:  base
                   ,data-default
                   ,persistent
                   ,persistent-template
                   ,persistent-postgresql
                   ,text
                   ,aeson
                   ,yesod
                   ,yesod-auth
                   ,yesod-core
                   ,yesod-static
                   ,http-conduit >= 2.0
                   ,shakespeare-js
                   ,hamlet
                   ,heroku
